--- a/testingNormalization/demo_STATISnorm4r.rmd
+++ b/testingNormalization/demo_STATISnorm4r.rmd
@@ -68,8 +68,9 @@ value.col <- colorRamps::blue2red(100)
 ### The heatmap:
 Given that all networks have strong within connection, we want to differentiate networks that:
 
-* have low between-network connection (an isolate network) -- E and N
+* have low between-network connection (an isolated network) -- E and N
 * have strong connection with one other network -- A and C
+(Note: These two networks also have strong connections to two other networks, but these connections are not as evenly strong as the O network, and they both have smaller SS.)
 * have strong connection with two (or more) other network -- O
 
 ```{r show_cor, echo = FALSE}
@@ -449,7 +450,10 @@ par(mfrow=c(1,1))
 
 
 * The network with the largest size will dominate the first component.
-* The first component gives the frequency of connections for each network.
+* The first component gives the frequency of connections for each network. (Isolated -> Connected)
+* The first component might give a combination of two features of networks: 
+  + sums of squares 
+  + frequency of connectivity.
 * The second component differentiates different isolated networks.
 
 When compared to PCA of the original matrix, the STATIS-like normalization is similar to a rotation for components 1 and 2. The third component is not making much sense.
