--- a/testing_jc/Demo_DiSTATIS.rmd
+++ b/testing_jc/Demo_DiSTATIS.rmd
@@ -94,7 +94,7 @@ vox.order.col <- list(Comm = c("A" = Comm.col$gc[1],
 value.col <- colorRamps::blue2red(100)
 ```
 
-## Check data with heatmap
+## Check data with heatmap for the first session
 ```{r show_heatmap, echo = FALSE}
 pheatmap(rcube.order[,,1],color = value.col,
          cluster_cols = FALSE, cluster_rows = FALSE,
@@ -225,7 +225,7 @@ f.mean.graph <- createFactorMap(BootCube.Comm$GroupMeans,
 ### Plot means with its own constraints
 f.mean.graph.owncon <- createFactorMap(BootCube.Comm$GroupMeans,
                                 axis1 = x_cp, axis2 = y_cp,
-                                title = "Compromise - Factor scores with means of networks: cp 2 & 3",
+                                title = "Compromise - Factor scores with means of networks: cp 1 & 2",
                                 col.points = Comm.col$gc[rownames(BootCube.Comm$GroupMeans),],
                                 col.labels = Comm.col$gc[rownames(BootCube.Comm$GroupMeans),],
                                 alpha.points = .8,
@@ -257,7 +257,7 @@ f01c.Fi.CiMean <- f.mean.graph.owncon$zeMap_background + f.mean.graph.owncon$zeM
 ### Plot means
 f.mean.graph.23 <- createFactorMap(BootCube.Comm$GroupMeans,
                                 axis1 = 2, axis2 = 3,
-                                title = "Compromise - Factor scores with means of networks",
+                                title = "Compromise - Factor scores with means of networks: cp 2 & 3",
                                 col.points = Comm.col$gc[rownames(BootCube.Comm$GroupMeans),],
                                 constraints = f.graph$constraints,
                                 col.labels = Comm.col$gc[rownames(BootCube.Comm$GroupMeans),],
@@ -266,7 +266,7 @@ f.mean.graph.23 <- createFactorMap(BootCube.Comm$GroupMeans,
 ### Plot means with its own constraints
 f.mean.graph.owncon.23 <- createFactorMap(BootCube.Comm$GroupMeans,
                                 axis1 = 2, axis2 = 3,
-                                title = "Compromise - Factor scores with means of networks",
+                                title = "Compromise - Factor scores with means of networks: cp 2 & 3",
                                 col.points = Comm.col$gc[rownames(BootCube.Comm$GroupMeans),],
                                 col.labels = Comm.col$gc[rownames(BootCube.Comm$GroupMeans),],
                                 alpha.points = .8,
@@ -280,6 +280,127 @@ f.CI.graph.23 <- MakeCIEllipses(BootCube.Comm$BootCube[,c(2,3),],
 f02b.Fi.Mean <- f.graph.23$zeMap_background + f.graph.23$zeMap_dots + f.CI.graph.23 + f.mean.graph.23$zeMap_dots + f.mean.graph.23$zeMap_text + f.labels.23 
 # With CI
 f02c.Fi.CiMean <- f.mean.graph.owncon.23$zeMap_background + f.mean.graph.owncon.23$zeMap_dots + f.CI.graph.23 + f.labels.23 + f.mean.graph.owncon.23$zeMap_text
+```
+
+##### All heat maps
+```{r all_hmap, echo = FALSE, fig.show = 'hide'}
+hmap1 <- pheatmap(rcube.order[,,1],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 1st session")
+hmap2 <- pheatmap(rcube.order[,,2],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 2nd session")
+hmap3 <- pheatmap(rcube.order[,,3],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 3rd session")
+hmap4 <- pheatmap(rcube.order[,,4],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 4th session")
+hmap5 <- pheatmap(rcube.order[,,5],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 5th session")
+hmap6 <- pheatmap(rcube.order[,,6],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 6th session")
+hmap7 <- pheatmap(rcube.order[,,7],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 7th session")
+hmap8 <- pheatmap(rcube.order[,,8],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 8th session")
+hmap9 <- pheatmap(rcube.order[,,9],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 9th session")
+hmap10 <- pheatmap(rcube.order[,,10],color = value.col,
+         cluster_cols = FALSE, cluster_rows = FALSE,
+         cellwidth = 0.8, cellheight = 0.8,
+         annotation_col = vox.order.df,
+         annotation_row = vox.order.df,
+         annotation_legend = FALSE,
+         annotation_names_col = FALSE,
+         annotation_names_row = FALSE,
+         annotation_colors = vox.order.col,
+         breaks = seq(-1,1,by = 0.02),
+         main="CorMat: 10th session")
+```
+
+```{r plot_fig_10hmap, echo=F, fig.height=16, fig.width= 40}
+gridExtra::grid.arrange(as.grob(hmap1$gtable),as.grob(hmap2$gtable),as.grob(hmap3$gtable),
+                        as.grob(hmap4$gtable),as.grob(hmap5$gtable),as.grob(hmap6$gtable),
+                        as.grob(hmap7$gtable),as.grob(hmap8$gtable),as.grob(hmap9$gtable),
+                        as.grob(hmap10$gtable),ncol=5)
 ```
 
 ##### Component 1 & 2
