--- a/testing_jc/Demo_DiSTATIS.rmd
+++ b/testing_jc/Demo_DiSTATIS.rmd
@@ -26,6 +26,9 @@ suppressMessages(library(superheat))
 suppressMessages(library(gridExtra))
 suppressMessages(library(ggplotify))
 suppressMessages(library(grid))
+# Read functions
+tool.path <- "../tools/"
+source(paste0(tool.path,"SScomm.R"))
 ```
 
 
@@ -46,6 +49,9 @@ for(i in 1:nrow(CommName)){
   vox.des$Comm.Col[vox.des$Comm==CommName$Comm[i]] <- as.character(CommName$CommColor[i])
   vox.des$Comm.rcd[vox.des$Comm==CommName$Comm[i]] <- as.character(CommName$CommLabel.short[i])
 }
+# Create design matrix for communities
+vox.des.mat <- makeNominalData(as.matrix(vox.des$Comm.rcd))
+colnames(vox.des.mat) <- sub(".","",colnames(vox.des.mat))
 ```
 
 This is a data cube of correlation: ROIs x ROIs x 10 sessions
@@ -63,6 +69,16 @@ This correlation data are then transformed into distances (for DiSTATIS)
 dcube <- cor2dist(cubes$rcube)
 # Dimension
 dim(dcube)
+```
+
+## Compute SS of each community
+
+```{r SS, include = FALSE}
+# SS of correlation
+ss_rcube <- SScomm(cubes$rcube,vox.des.mat)
+# SS of distance
+ss_dcube <- SScomm(dcube,vox.des.mat)
+
 ```
 
 Get community information and create colors for different communities
@@ -92,6 +108,49 @@ superheat(cubes$rcube[,,1],
           title = "Correlation matric of the 1st session"
 )
 ```
+
+## Check the sums of squares (of correlation matrix) of the 1st session
+
+```{r SS_heatR_1, echo = FALSE, fig.height= 16, fig.width = 16}
+superheat(ss_rcube[,,1],
+          membership.cols = rownames(ss_rcube[,,1]),
+          membership.rows = colnames(ss_rcube[,,1]),
+          clustering.method = NULL,
+          heat.col.scheme = "viridis",
+          left.label.size = 0.08,
+          bottom.label.size = 0.05,
+          y.axis.reverse = TRUE,
+          left.label.col = Comm.col$gc[order(rownames(Comm.col$gc))], # order by community name
+          bottom.label.col = Comm.col$gc[order(rownames(Comm.col$gc))],
+          left.label.text.size = 3,
+          bottom.label.text.size = 2,
+          left.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+          bottom.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+          left.label.text.alignment = "left"
+)
+```
+
+## Check the sums of squares (of distance matrix) of the 1st session
+
+```{r SS_heatD_1, echo = FALSE, fig.height= 16, fig.width = 16}
+superheat(ss_dcube[,,1],
+          membership.cols = rownames(ss_rcube[,,1]),
+          membership.rows = colnames(ss_rcube[,,1]),
+          clustering.method = NULL,
+          heat.col.scheme = "viridis",
+          left.label.size = 0.08,
+          bottom.label.size = 0.05,
+          y.axis.reverse = TRUE,
+          left.label.col = Comm.col$gc[order(rownames(Comm.col$gc))], # order by community name
+          bottom.label.col = Comm.col$gc[order(rownames(Comm.col$gc))],
+          left.label.text.size = 3,
+          bottom.label.text.size = 2,
+          left.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+          bottom.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+          left.label.text.alignment = "left"
+)
+```
+
 
 ## Run DiSTATIS
 ```{r distatis}
@@ -261,6 +320,7 @@ f02c.Fi.CiMean <- f.mean.graph.owncon.23$zeMap_background + f.mean.graph.owncon.
 ##### All heat maps and Rv
 ```{r all_hmap, echo = FALSE, fig.show = 'hide'}
 for(session.count in 1:dim(cubes$rcube)[3]){
+  # heat map of correlation matrices
   hmap.name <- sprintf("hmap%s",session.count)
   assign(hmap.name, superheat(cubes$rcube[,,session.count],
                               membership.cols = vox.des$Comm.rcd,
@@ -278,8 +338,43 @@ for(session.count in 1:dim(cubes$rcube)[3]){
                               bottom.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
                               left.label.text.alignment = "left",
                               title = sprintf("Correlation matrix of #%s session",session.count)
-  )
-  )
+  ))
+  # heat map of SS of correlation matrices
+  rSS_hmap.name <- sprintf("rSS_hmap%s", session.count)
+  assign(rSS_hmap.name,superheat(ss_rcube[,,1],
+                                membership.cols = rownames(ss_rcube[,,session.count]),
+                                membership.rows = colnames(ss_rcube[,,session.count]),
+                                clustering.method = NULL,
+                                heat.col.scheme = "viridis",
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                y.axis.reverse = TRUE,
+                                left.label.col = Comm.col$gc[order(rownames(Comm.col$gc))], # order by community name
+                                bottom.label.col = Comm.col$gc[order(rownames(Comm.col$gc))],
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+                                bottom.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+                                left.label.text.alignment = "left"
+  ))
+  # heat map of SS of correlation matrices
+  dSS_hmap.name <- sprintf("dSS_hmap%s", session.count)
+  assign(dSS_hmap.name,superheat(ss_dcube[,,session.count],
+                                membership.cols = rownames(ss_dcube[,,session.count]),
+                                membership.rows = colnames(ss_dcube[,,session.count]),
+                                clustering.method = NULL,
+                                heat.col.scheme = "viridis",
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                y.axis.reverse = TRUE,
+                                left.label.col = Comm.col$gc[order(rownames(Comm.col$gc))], # order by community name
+                                bottom.label.col = Comm.col$gc[order(rownames(Comm.col$gc))],
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+                                bottom.label.text.col = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
+                                left.label.text.alignment = "left"
+  ))
 }
 ```
 Rv factor scores:
@@ -288,13 +383,31 @@ Rv factor scores:
 print(Rvmap)
 ```
 
-Heap maps:
+Heap maps of correlation matrices:
 
 ```{r plot_fig_10hmap, echo=F, fig.height=16, fig.width= 40}
 gridExtra::grid.arrange(as.grob(hmap1$plot),as.grob(hmap2$plot),as.grob(hmap3$plot),
                         as.grob(hmap4$plot),as.grob(hmap5$plot),as.grob(hmap6$plot),
                         as.grob(hmap7$plot),as.grob(hmap8$plot),as.grob(hmap9$plot),
                         as.grob(hmap10$plot),ncol=5)
+```
+
+Heap maps of SS of correlation matrices:
+
+```{r plot_fig_10rSShmap, echo=F, fig.height=16, fig.width= 40}
+gridExtra::grid.arrange(as.grob(rSS_hmap1$plot),as.grob(rSS_hmap2$plot),as.grob(rSS_hmap3$plot),
+                        as.grob(rSS_hmap4$plot),as.grob(rSS_hmap5$plot),as.grob(rSS_hmap6$plot),
+                        as.grob(rSS_hmap7$plot),as.grob(rSS_hmap8$plot),as.grob(rSS_hmap9$plot),
+                        as.grob(rSS_hmap10$plot),ncol=5)
+```
+
+Heap maps of SS of distance matrices:
+
+```{r plot_fig_10dSShmap, echo=F, fig.height=16, fig.width= 40}
+gridExtra::grid.arrange(as.grob(dSS_hmap1$plot),as.grob(dSS_hmap2$plot),as.grob(dSS_hmap3$plot),
+                        as.grob(dSS_hmap4$plot),as.grob(dSS_hmap5$plot),as.grob(dSS_hmap6$plot),
+                        as.grob(dSS_hmap7$plot),as.grob(dSS_hmap8$plot),as.grob(dSS_hmap9$plot),
+                        as.grob(dSS_hmap10$plot),ncol=5)
 ```
 
 ##### Component 1 & 2
