Interpret DiSTATIS results, change abbreviations for networks, and add README.md to tools/

--- a/testing_jc/Demo_DiSTATIS.rmd
+++ b/testing_jc/Demo_DiSTATIS.rmd
@@ -411,6 +411,7 @@ gridExtra::grid.arrange(as.grob(dSS_hmap1$plot),as.grob(dSS_hmap2$plot),as.grob(
 ```
 
 ##### Component 1 & 2
+
 ```{r plot_fig12_mean, echo=F, fig.height=24, fig.width= 16}
 gridExtra::grid.arrange(as.grob(hmap1$plot), as.grob(f01b.Fi.Ti),
                         as.grob(hmap1$plot), as.grob(f01c.Fi.CiTiMean), 
@@ -422,3 +423,34 @@ gridExtra::grid.arrange(as.grob(hmap1$plot), as.grob(f01b.Fi.Ti),
 gridExtra::grid.arrange(as.grob(hmap1$plot), as.grob(f02b.Fi.Mean),
                         as.grob(hmap1$plot), as.grob(f02c.Fi.CiMean), ncol=2)
 ```
+
+## Interpretation
+
+#### From JCY:
+
+* Distance in the factor score maps illustrate the relationship between two networks with a shorter distance reflecting a stronger correlation
+
+* Component 1: Defult mode (DMN) VS Cingulo-opercular (CON)
+    
+    + DMN and CON have almost opposite pattern in several big networks (i.e., lateral Visual (lVis), DMN, CON, ventral attention (vATN), Salience(SLC))
+    
+    + Stronger correlation to DMN: vATN,
+    
+    + Stronger correlation to CON: lVis, mVis, CON, SLC
+
+* Component 2: DMN -> CON -> Fronto-parietal (FPN) & dorsal attention (dATN)
+
+    + FPN is the network with the most SS of correlation, CON is the second most, and DMN is the third most
+    
+    + FPN is not does not share pattern with either DMN or CON and only connects to these two networks moderately
+    
+    + FPN is stronly correlated only to dATN
+
+* Component 3: Sensorimotor networds VS Salience, medial temporal (MTL)
+
+    + All sensorimotor networks have small correlation to salience, parietal memory (PMN) and mVis networks
+    
+    + Salience, PMN, and mVis all have small correlation to sensorimotor, attention, PMN, Auditory, and MTL networks
+    
+    + These are seen in both the correlation matrix and the SS of correlation
+    
