MYC added interpretation to DiSTATIS md.

--- a/testing_jc/Demo_DiSTATIS.rmd
+++ b/testing_jc/Demo_DiSTATIS.rmd
@@ -454,3 +454,17 @@ gridExtra::grid.arrange(as.grob(hmap1$plot), as.grob(f02b.Fi.Mean),
     
     + These are seen in both the correlation matrix and the SS of correlation
     
+#### from MYC: 
+* Factor 1: 
+  + I agree with your observation. 
+  + Default Mode (DMN) and Cingular-Opercular Network (CON) being opposite is not surprising. CON is the top-down processing attentional network that is quite different from frontal-parietal network (FPN), which shares more similarity with DMN. 
+So along Factor 1, we see DMN, FP and its cousin DAN on one side, and CON on the other (along with Salience [SAN]).  
+  + **One thing to note is that there are very few nodes in some of these networks. The normalization allows them to give a bigger contribution despite their smaller size, but they are also just less consistent (thus the a larger confidence interval for networks like Salience).** <- correct me if this is a wrong way to view how network-size interacts with normalization and therefore the interpretation. 
+
+* Factor 2: 
+    + Here we have Frontal Parietal (FPN) and its cousin Dorsal Attention Network (DAN) pulling weight on one side, and essentially the rest of the stuff along the middle, and maybe DMN, Ventral Attention Network (VAN), and Auditory (AUD) on the other.
+    + The VAN is topographically (physically) located close to Auditory areas, and has decent connection to DMN. VAN and DAN are sort of opposite in their connection pattern, so that may be why they are on opposite sides. 
+    + **I’m not sure how the SS of correlation plays into the explanation for Factor 2? Because DAN has a rather weak SS correlation, but its at the very end factor 2.**
+
+* Factor 3: Differentiating between Visual networks from the rest of the sensory-motor networks
+    + Here we have all the motor (premotor, hand/face motor) networks & auditory (AUD) opposing the visual networks plus Salience, which shows moderate correlation to both Visual networks. I think that is the bigger contrast for factor 3. 
